--- a/index.html
+++ b/index.html
@@ -63,8 +63,14 @@
     <hr />
     <footer>
       <h3>Let's Get in Touch!</h3>
-      <a href="https://www.linkedin.com/in/evan-liu-195bba22a"> LinkedIn</a>
-      <a href="https://github.com/EvanLiu0">GitHub</a>
+      <!-- Image Credit: https://iconsplace.com/white-icons/linkedin-icon-18/ -->
+      <a href="https://www.linkedin.com/in/evan-liu-195bba22a"
+        ><img class="footer-icon" src="./assets/images/linkedin.webp"
+      /></a>
+      <!-- Image Credit: https://www.pngkey.com/maxpic/u2w7q8w7a9u2r5t4/ -->
+      <a href="https://github.com/EvanLiu0"
+        ><image class="footer-icon" src="./assets/images/github.webp"
+      /></a>
     </footer>
   </body>
 </html>
