--- a/index.html
+++ b/index.html
@@ -65,11 +65,17 @@
       <h3>Let's Get in Touch!</h3>
       <!-- Image Credit: https://iconsplace.com/white-icons/linkedin-icon-18/ -->
       <a href="https://www.linkedin.com/in/evan-liu-195bba22a"
-        ><img class="footer-icon" src="./assets/images/linkedin.webp"
+        ><img
+          class="footer-icon"
+          src="./assets/images/linkedin-white.webp"
+          alt="Linkedin Logo"
       /></a>
       <!-- Image Credit: https://www.pngkey.com/maxpic/u2w7q8w7a9u2r5t4/ -->
       <a href="https://github.com/EvanLiu0"
-        ><image class="footer-icon" src="./assets/images/github.webp"
+        ><image
+          class="footer-icon"
+          src="./assets/images/github-white.webp"
+          alt="GitHub Logo"
       /></a>
     </footer>
   </body>
