Styled Projects Page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="./projects.html">Past Projects</a>
         <a href="./contact.html">Contact</a>
         <a href="./about.html">About</a>
-        <a href="./index.html">Home</a>
+        <a class="active" href="./index.html">Home</a>
       </nav>
     </header>
     <main>
