--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <a href="./experiments.html">Experiments</a>
         <a href="./projects.html">Past Projects</a>
         <a href="./contact.html">Contact</a>
-        <a href="./about.html">About</a>
+        <a class="active" href="./about.html">About</a>
         <a href="./index.html">Home</a>
       </nav>
     </header>
@@ -33,7 +33,7 @@
       <h2>About Me</h2>
       <div id="about-container">
         <nav id="container-nav">
-          <a href="./about.html">Bio</a>
+          <a class="active" href="./about.html">Bio</a>
           <a href="./skills.html">Skills</a>
           <a href="./employment.html">Employment History</a>
         </nav>
@@ -54,20 +54,20 @@
           <p>
             Why, hello again! My name is Evan Liu, and I'm currently a
             third-year undergraduate student at the
-            <strong>University of California, San Diego</strong>. I am currently
-            pursuing a B.S. in <strong>Cognitive Science</strong> with a
+            <em>University of California, San Diego</em>. I am currently
+            pursuing a B.S. in <em>Cognitive Science</em> with a
             specialization in
-            <strong>Machine Learning and Neural Computation</strong>, and I am
-            also double minoring in <strong>Computer Science</strong> and
-            <strong>Design</strong>.
+            <em>Machine Learning and Neural Computation</em>, and I am
+            also double minoring in <em>Computer Science</em> and
+            <em>Design</em>.
           </p>
           <p>
             My drive to pursue a career in software engineering stems from a
-            desire to use technology to meaningfully impact others. Where others
-            see ones and zeroes, I look for opportunities to bring people
-            together and alleviate burdens, and I am always on the lookout for
+            desire to use technology to <em>meaningfully</em> impact others. Where others
+            see ones and zeroes, I look for opportunities to <em>bring people
+            together</em> and <em>alleviate</em> burdens, and I am always on the lookout for
             chances to use what I know about human centered design and
-            programming to make the world a better place.
+            programming to make the world a <em>better place</em>.
           </p>
           </details>
         </section>
