--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         /></picture> -->
         <a href="./experiments.html">Experiments</a>
         <a href="./projects.html">Past Projects</a>
-        <a href="./contact.html">Contact</a>
+        <a class="active" href="./contact.html">Contact</a>
         <a href="./about.html">About</a>
         <a href="./index.html">Home</a>
       </nav>
