--- a/employment.html
+++ b/employment.html
@@ -25,7 +25,7 @@
         <a href="./experiments.html">Experiments</a>
         <a href="./projects.html">Past Projects</a>
         <a href="./contact.html">Contact</a>
-        <a href="./about.html">About</a>
+        <a class="active" href="./about.html">About</a>
         <a href="./index.html">Home</a>
       </nav>
     </header>
@@ -35,7 +35,7 @@
         <nav id="container-nav">
           <a href="./about.html">Bio</a>
           <a href="./skills.html">Skills</a>
-          <a href="./employment.html">Employment History</a>
+          <a class="active" href="./employment.html">Employment History</a>
         </nav>
         <section>
           <h4>Employment History</h4>
@@ -43,6 +43,7 @@
             Click on one of the following menus to learn more about my past work
             experiences!
           </p>
+          <hr />
           <details>
             <summary><strong>Capital One</strong></summary>
             <p><em>Duration:</em> June 2023 - August 2023</p>
