--- a/skills.html
+++ b/skills.html
@@ -25,7 +25,7 @@
         <a href="./experiments.html">Experiments</a>
         <a href="./projects.html">Past Projects</a>
         <a href="./contact.html">Contact</a>
-        <a href="./about.html">About</a>
+        <a class="active" href="./about.html">About</a>
         <a href="./index.html">Home</a>
       </nav>
     </header>
@@ -34,7 +34,7 @@
       <div id="about-container">
         <nav id="container-nav">
           <a href="./about.html">Bio</a>
-          <a href="./skills.html">Skills</a>
+          <a class="active" href="./skills.html">Skills</a>
           <a href="./employment.html">Employment History</a>
         </nav>
         <section>
