--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <!-- <picture
           ><img src="./assets/images/hamburger.png" alt="Hamburger Menu"
         /></picture> -->
-        <a href="./experiments.html">Experiments</a>
         <a href="./projects.html">Past Projects</a>
         <a href="./contact.html">Contact</a>
         <a href="./about.html">About</a>
@@ -26,7 +25,7 @@
     </header>
     <main>
       <div id="hero">
-        <!-- Image Credit: https://wallpaper.dog/blue-technology-wallpapers-->
+        <!-- Image Credit: https://wallpaper.dog/blue-technology-wallpapers -->
         <img
           id="hero-image"
           src="./assets/images/tech.webp"
