--- a/projects/wtracker.html
+++ b/projects/wtracker.html
@@ -4,33 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./assets/images/favicon.png" />
+    <link rel="stylesheet" href="../assets/styles/wtracker.css" />
     <title>Evan Liu's Portfolio</title>
   </head>
   <body>
-    <header>
-      <h1>
-        <svg width="16.3px" height="26.9px">
-          <polygon
-            points="8.1,0 10.3,4.3 15.2,5 11.7,8.3 12.5,13 8.1,10.8 3.8,13 4.6,8.3 1.1,5 6,4.3"
-          />
-        </svg>
-        Evan Liu's Portfolio
-        <svg width="16.3px" height="26.9px">
-          <polygon
-            points="8.1,0 10.3,4.3 15.2,5 11.7,8.3 12.5,13 8.1,10.8 3.8,13 4.6,8.3 1.1,5 6,4.3"
-          />
-        </svg>
+    <header class="nav-container">
+      <h1 class="title">
+        <a href="./index.html">Evan Liu's Portfolio</a>
       </h1>
       <nav>
-        <a href="../index.html">Home</a>
-        <a href="../about.html">About</a>
+        <!-- <picture
+          ><img src="./assets/images/hamburger.png" alt="Hamburger Menu"
+        /></picture> -->
+        <a class="active" href="../projects.html">Past Projects</a>
         <a href="../contact.html">Contact</a>
-        <a href="../projects.html">Past Projects</a>
-        <a href="../experiments.html">Experiments</a>
+        <a href="../about.html">About</a>
+        <a href="../index.html">Home</a>
       </nav>
     </header>
     <main>
-      <h2>Web Scraper</h2>
+      <h2>Workout Tracker App</h2>
       <!-- To be positioned on right side of page once CSS allowed, summary of project objectives as specified by overseer
         To be styled as example at this page: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/aside -->
       <aside>
@@ -41,13 +35,7 @@
           </i>
         </p>
       </aside>
-      <br />
-      <img
-        src="../assets/images/gym.jpg"
-        width="600"
-        height="400"
-        alt="webscraping graphic"
-      />
+      <img src="../assets/images/gym.jpg" alt="Gym Floor Graphic" />
       <br />
       <p><strong>Objectives</strong></p>
       <ol>
@@ -83,21 +71,31 @@
         workout API can tell you that information in a matter of seconds.
         However, it still can't help you perform said flip...
       </p>
-      <!-- Code snippets to be styled when CSS permitted -->
-      <code>
-        const res = axios .post("http://localhost:8080/api/test/getInfo", {
-        user: String(username), }) .then((response) => {
-        console.log(response.data.message); }) .catch((error) => { if
-        (error.response) { console.log(error.response.data); } });
-      </code>
-      <br />
-      <br />
-      <hr />
+      <section>
+        <code>
+          const res = axios .post("http://localhost:8080/api/test/getInfo", {
+          user: String(username), }) .then((response) => {
+          console.log(response.data.message); }) .catch((error) => { if
+          (error.response) { console.log(error.response.data); } });
+        </code>
+      </section>
     </main>
     <footer>
       <h3>Let's Get in Touch!</h3>
-      <a href="https://www.linkedin.com/in/evan-liu-195bba22a"> LinkedIn</a>
-      <a href="https://github.com/EvanLiu0">GitHub</a>
+      <!-- Image Credit: https://iconsplace.com/white-icons/linkedin-icon-18/ -->
+      <a href="https://www.linkedin.com/in/evan-liu-195bba22a"
+        ><img
+          class="footer-icon"
+          src="../assets/images/linkedin-white.webp"
+          alt="Linkedin Logo"
+      /></a>
+      <!-- Image Credit: https://www.pngkey.com/maxpic/u2w7q8w7a9u2r5t4/ -->
+      <a href="https://github.com/EvanLiu0"
+        ><image
+          class="footer-icon"
+          src="../assets/images/github-white.webp"
+          alt="GitHub Logo"
+      /></a>
     </footer>
   </body>
 </html>
