--- a/about.html
+++ b/about.html
@@ -22,7 +22,6 @@
         <!-- <picture
           ><img src="./assets/images/hamburger.png" alt="Hamburger Menu"
         /></picture> -->
-        <a href="./experiments.html">Experiments</a>
         <a href="./projects.html">Past Projects</a>
         <a href="./contact.html">Contact</a>
         <a class="active" href="./about.html">About</a>
@@ -43,6 +42,8 @@
             <source
               media="(max-width: 500px)"
               srcset="./assets/images/standing.jpg"
+              height="200"
+              width="170"
             />
             <img
               width="200"
