--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./assets/images/favicon.png" />
     <link rel="stylesheet" href="./assets/styles/contact.css" />
     <title>Evan Liu's Portfolio</title>
   </head>
@@ -16,7 +17,6 @@
         <!-- <picture
           ><img src="./assets/images/hamburger.png" alt="Hamburger Menu"
         /></picture> -->
-        <a href="./experiments.html">Experiments</a>
         <a href="./projects.html">Past Projects</a>
         <a class="active" href="./contact.html">Contact</a>
         <a href="./about.html">About</a>
