--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evan Liu's Portfolio</title>
+    <link rel="icon" href="./assets/images/favicon.png" />
     <link rel="stylesheet" href="./assets/styles/projects.css" />
   </head>
   <body>
@@ -16,7 +17,6 @@
         <!-- <picture
           ><img src="./assets/images/hamburger.png" alt="Hamburger Menu"
         /></picture> -->
-        <a href="./experiments.html">Experiments</a>
         <a class="active" href="./projects.html">Past Projects</a>
         <a href="./contact.html">Contact</a>
         <a href="./about.html">About</a>
@@ -27,6 +27,7 @@
       <h2>Projects</h2>
       <div id="image-container">
         <figure>
+          <!-- Image Credit: https://www.google.com/search?q=web+scraping+blue&client=firefox-b-1-d&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj5tZ62nZv9AhXNIUQIHVVJChEQ_AUoAXoECAIQAw&biw=1067&bih=790&dpr=2#imgrc=gsd0AlIN1EhxgM -->
           <img
             src="./assets/images/webscraping.jpg"
             alt="Webscraping Graphic"
