--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evan Liu's Portfolio</title>
-    <link rel="icon" href="./assets/images/favicon.png" />
+    <!-- Image Credit: https://stock.adobe.com/images/letter-e-glitch-style-alphabet-modern-font-logo-vector-icon/252746757 -->
+    <link rel="icon" href="./assets/images/favicon-final.webp" />
     <link rel="stylesheet" href="./assets/styles/about.css" />
     <style>
       section {
@@ -42,35 +43,30 @@
             <source
               media="(max-width: 500px)"
               srcset="./assets/images/standing.jpg"
-              height="200"
-              width="170"
             />
             <img
-              width="200"
-              height="200"
               src="./assets/images/profile.jpeg"
-              alt="Profile Picture"
+              alt="Profile Picture Condensed"
+              title="Profile Picture"
             />
           </picture>
           <p>
             Why, hello again! My name is Evan Liu, and I'm currently a
             third-year undergraduate student at the
             <em>University of California, San Diego</em>. I am currently
-            pursuing a B.S. in <em>Cognitive Science</em> with a
-            specialization in
-            <em>Machine Learning and Neural Computation</em>, and I am
-            also double minoring in <em>Computer Science</em> and
-            <em>Design</em>.
+            pursuing a B.S. in <em>Cognitive Science</em> with a specialization
+            in <em>Machine Learning and Neural Computation</em>, and I am also
+            double minoring in <em>Computer Science</em> and <em>Design</em>.
           </p>
           <p>
             My drive to pursue a career in software engineering stems from a
-            desire to use technology to <em>meaningfully</em> impact others. Where others
-            see ones and zeroes, I look for opportunities to <em>bring people
-            together</em> and <em>alleviate</em> burdens, and I am always on the lookout for
-            chances to use what I know about human centered design and
-            programming to make the world a <em>better place</em>.
+            desire to use technology to <em>meaningfully</em> impact others.
+            Where others see ones and zeroes, I look for opportunities to
+            <em>bring people together</em> and <em>alleviate</em> burdens, and I
+            am always on the lookout for chances to use what I know about human
+            centered design and programming to make the world a
+            <em>better place</em>.
           </p>
-          </details>
         </section>
       </div>
     </main>
@@ -82,13 +78,15 @@
           class="footer-icon"
           src="./assets/images/linkedin-white.webp"
           alt="Linkedin Logo"
+          title="LinkedIn"
       /></a>
       <!-- Image Credit: https://www.pngkey.com/maxpic/u2w7q8w7a9u2r5t4/ -->
       <a href="https://github.com/EvanLiu0"
-        ><image
+        ><img
           class="footer-icon"
           src="./assets/images/github-white.webp"
           alt="GitHub Logo"
+          title="GitHub"
       /></a>
     </footer>
   </body>
