--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evan Liu's Portfolio</title>
-    <link rel="icon" href="./assets/images/favicon.png" />
+    <!-- Image Credit: https://stock.adobe.com/images/letter-e-glitch-style-alphabet-modern-font-logo-vector-icon/252746757 -->
+    <link rel="icon" href="./assets/images/favicon-final.webp" />
     <link rel="stylesheet" href="./assets/styles/projects.css" />
   </head>
   <body>
@@ -29,10 +30,8 @@
         <figure>
           <!-- Image Credit: https://www.google.com/search?q=web+scraping+blue&client=firefox-b-1-d&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj5tZ62nZv9AhXNIUQIHVVJChEQ_AUoAXoECAIQAw&biw=1067&bih=790&dpr=2#imgrc=gsd0AlIN1EhxgM -->
           <img
-            src="./assets/images/webscraping.jpg"
+            src="./assets/images/webscraping.webp"
             alt="Webscraping Graphic"
-            width="200"
-            height="200"
           />
           <figcaption>
             <h4>
@@ -47,12 +46,8 @@
           </figcaption>
         </figure>
         <figure>
-          <img
-            src="./assets/images/gym.jpg"
-            alt="Gym Floor"
-            width="200"
-            height="200"
-          />
+          <!-- Image Credit: https://www.society19.com/free-things-to-do-around-uc-san-diego/ -->
+          <img src="./assets/images/gym.webp" alt="Gym Floor" />
           <figcaption>
             <h4>
               <a href="./projects/wtracker.html">Workout Tracker Web App</a>
@@ -66,12 +61,8 @@
           </figcaption>
         </figure>
         <figure>
-          <img
-            src="./assets/images/zoo.jpg"
-            alt="Zoo Entrance"
-            width="200"
-            height="200"
-          />
+          <!-- Image Credit: https://zoo.sandiegozoo.org/plan-your-visit -->
+          <img src="./assets/images/zoo.webp" alt="Zoo Entrance" />
           <figcaption>
             <h4>
               <a href="./projects/zooseeker.html">Zoo Navigation Assistant</a>
@@ -90,19 +81,20 @@
       <div id="footer-text">
         <h3>Let's Get in Touch!</h3>
         <!-- Image Credit: https://iconsplace.com/white-icons/linkedin-icon-18/ -->
-        <!-- Image Credit: https://iconsplace.com/white-icons/linkedin-icon-18/ -->
         <a href="https://www.linkedin.com/in/evan-liu-195bba22a"
           ><img
             class="footer-icon"
             src="./assets/images/linkedin-white.webp"
             alt="Linkedin Logo"
+            title="LinkedIn"
         /></a>
         <!-- Image Credit: https://www.pngkey.com/maxpic/u2w7q8w7a9u2r5t4/ -->
         <a href="https://github.com/EvanLiu0"
-          ><image
+          ><img
             class="footer-icon"
             src="./assets/images/github-white.webp"
             alt="GitHub Logo"
+            title="GitHub"
         /></a>
       </div>
     </footer>
