--- a/projects/scraper.html
+++ b/projects/scraper.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evan Liu's Portfolio</title>
-    <link rel="icon" href="../assets/images/favicon.png" />
+    <!-- Image Credit: https://stock.adobe.com/images/letter-e-glitch-style-alphabet-modern-font-logo-vector-icon/252746757 -->
+    <link rel="icon" href="../assets/images/favicon-final.webp" />
     <link rel="stylesheet" href="../assets/styles/scraper.css" />
-    <title>Evan Liu's Portfolio</title>
   </head>
   <body>
     <header class="nav-container">
@@ -36,7 +36,11 @@
         </p>
       </aside>
       <!-- Image Credit: https://www.google.com/search?q=web+scraping+blue&client=firefox-b-1-d&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj5tZ62nZv9AhXNIUQIHVVJChEQ_AUoAXoECAIQAw&biw=1067&bih=790&dpr=2#imgrc=gsd0AlIN1EhxgM -->
-      <img src="../assets/images/webscraping.jpg" alt="webscraping graphic" />
+      <img
+        src="../assets/images/webscraping.webp"
+        alt="Webscraping Graphic"
+        title="Webscraping"
+      />
       <p><strong>Objectives</strong></p>
       <ol>
         <li>
@@ -118,11 +122,11 @@ def get_results(search_term, eng, br):
         generated:
       </p>
       <figure>
+        <!-- Image Credit: Custom -->
         <img
-          src="../assets/images/urlsample.jpg"
-          width="600"
-          height="400"
+          src="../assets/images/urlsample.webp"
           alt="URL results display"
+          title="URL Results"
         />
         <figcaption>
           <b>Figure 1:</b> List of URLs containing personally identifying
@@ -130,11 +134,11 @@ def get_results(search_term, eng, br):
         </figcaption>
       </figure>
       <figure>
+        <!-- Image Credit: Custom -->
         <img
-          src="../assets/images/infosample.jpg"
-          width="600"
-          height="400"
+          src="../assets/images/infosample.webp"
           alt="Info results display"
+          title="Info Results"
         />
         <figcaption>
           <b>Figure 2:</b> List of personally identifying information found on
@@ -150,13 +154,15 @@ def get_results(search_term, eng, br):
           class="footer-icon"
           src="../assets/images/linkedin-white.webp"
           alt="Linkedin Logo"
+          title="LinkedIn"
       /></a>
       <!-- Image Credit: https://www.pngkey.com/maxpic/u2w7q8w7a9u2r5t4/ -->
       <a href="https://github.com/EvanLiu0"
-        ><image
+        ><img
           class="footer-icon"
           src="../assets/images/github-white.webp"
           alt="GitHub Logo"
+          title="GitHub"
       /></a>
     </footer>
   </body>
