--- a/projects/wtracker.html
+++ b/projects/wtracker.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./assets/images/favicon.png" />
+    <!-- Image Credit: https://stock.adobe.com/images/letter-e-glitch-style-alphabet-modern-font-logo-vector-icon/252746757 -->
+    <link rel="icon" href="../assets/images/favicon-final.webp" />
     <link rel="stylesheet" href="../assets/styles/wtracker.css" />
     <title>Evan Liu's Portfolio</title>
   </head>
@@ -25,8 +26,6 @@
     </header>
     <main>
       <h2>Workout Tracker App</h2>
-      <!-- To be positioned on right side of page once CSS allowed, summary of project objectives as specified by overseer
-        To be styled as example at this page: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/aside -->
       <aside>
         <p>
           <i>
@@ -35,7 +34,8 @@
           </i>
         </p>
       </aside>
-      <img src="../assets/images/gym.jpg" alt="Gym Floor Graphic" />
+      <!-- Image Credit: https://www.society19.com/free-things-to-do-around-uc-san-diego/ -->
+      <img src="../assets/images/gym.webp" alt="Gym Floor Graphic" />
       <br />
       <p><strong>Objectives</strong></p>
       <ol>
@@ -88,13 +88,15 @@
           class="footer-icon"
           src="../assets/images/linkedin-white.webp"
           alt="Linkedin Logo"
+          title="LinkedIn"
       /></a>
       <!-- Image Credit: https://www.pngkey.com/maxpic/u2w7q8w7a9u2r5t4/ -->
       <a href="https://github.com/EvanLiu0"
-        ><image
+        ><img
           class="footer-icon"
           src="../assets/images/github-white.webp"
           alt="GitHub Logo"
+          title="GitHub"
       /></a>
     </footer>
   </body>
