--- a/projects/zooseeker.html
+++ b/projects/zooseeker.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./assets/images/favicon.png" />
+    <!-- Image Credit: https://stock.adobe.com/images/letter-e-glitch-style-alphabet-modern-font-logo-vector-icon/252746757 -->
+    <link rel="icon" href="../assets/images/favicon-final.webp" />
     <link rel="stylesheet" href="../assets/styles/zooseeker.css" />
     <title>Evan Liu's Portfolio</title>
   </head>
@@ -25,8 +26,6 @@
     </header>
     <main>
       <h2>San Diego ZooSeeker</h2>
-      <!-- To be positioned on right side of page once CSS allowed, summary of project objectives as specified by overseer
-        To be styled as example at this page: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/aside -->
       <aside>
         <p>
           <i>
@@ -35,7 +34,12 @@
           </i>
         </p>
       </aside>
-      <img src="../assets/images/zoo.jpg" alt="Zoo Entrance Graphic" />
+      <!-- Image Credit: https://zoo.sandiegozoo.org/plan-your-visit -->
+      <img
+        src="../assets/images/zoo.webp"
+        alt="Zoo Entrance Graphic"
+        title="Zoo Entrance"
+      />
       <p><strong>Objectives</strong></p>
       <ol>
         <li>
@@ -66,10 +70,9 @@
       </p>
       <figure>
         <img
-          src="../assets/images/zooseeker-home.jpg"
-          width="350"
-          height="600"
-          alt="URL results display"
+          src="../assets/images/zooseeker-home.webp"
+          alt="ZooSeeker Home Page"
+          title="ZooSeeker Home Page"
         />
         <figcaption>
           <b>Figure 1:</b> Home page for planning exhibit itinerary <br />
@@ -77,10 +80,9 @@
       </figure>
       <figure>
         <img
-          src="../assets/images/zooseeker-plan.jpg"
-          width="350"
-          height="600"
-          alt="URL results display"
+          src="../assets/images/zooseeker-plan.webp"
+          alt="ZooSeeker Directions Page"
+          title="ZooSeeker Directions Page"
         />
         <figcaption>
           <b>Figure 2:</b> Directions page for navigating between exhibits
@@ -95,13 +97,15 @@
           class="footer-icon"
           src="../assets/images/linkedin-white.webp"
           alt="Linkedin Logo"
+          title="LinkedIn"
       /></a>
       <!-- Image Credit: https://www.pngkey.com/maxpic/u2w7q8w7a9u2r5t4/ -->
       <a href="https://github.com/EvanLiu0"
-        ><image
+        ><img
           class="footer-icon"
           src="../assets/images/github-white.webp"
           alt="GitHub Logo"
+          title="GitHub"
       /></a>
     </footer>
   </body>
