--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evan Liu's Portfolio</title>
-    <link rel="icon" href="./assets/images/favicon.png" />
+    <!-- Image Credit: https://stock.adobe.com/images/letter-e-glitch-style-alphabet-modern-font-logo-vector-icon/252746757 -->
+    <link rel="icon" href="./assets/images/favicon-final.webp" />
     <link rel="stylesheet" href="./assets/styles/about.css" />
     <style>
       section {
@@ -116,13 +117,15 @@
           class="footer-icon"
           src="./assets/images/linkedin-white.webp"
           alt="Linkedin Logo"
+          title="LinkedIn"
       /></a>
       <!-- Image Credit: https://www.pngkey.com/maxpic/u2w7q8w7a9u2r5t4/ -->
       <a href="https://github.com/EvanLiu0"
-        ><image
+        ><img
           class="footer-icon"
           src="./assets/images/github-white.webp"
           alt="GitHub Logo"
+          title="GitHub"
       /></a>
     </footer>
   </body>
